[package]
name = "libnet_gazer_traceroute"
version = "0.1.0"
authors = ["Serguei Oleinik <162591+soleinik@users.noreply.github.com>"]
edition = "2018"
description = "net-gazer - traceroute plugin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[workspace]
members=[
    "lib-tracer",
    "lib-data",
    "lib-fbuffers",
]

[dependencies]
#net-gazer-core = { git = "https://github.com/soleinik/net-gazer-core", branch = "master"}
net-gazer-core = { path = "../net-gazer-core"}
lib-tracer = { path="./lib-tracer" }
lib-data = { path="./lib-data" }
lib-fbuffers = { path="./lib-fbuffers" }

log = "0.4"
env_logger = "0.11"

pnet = "0.35"
ipnetwork = "0.20"
bitflags = "2.6"

[lib]
name = "net_gazer_traceroute"
crate-type = ["cdylib"]




[package.metadata.deb]
#depends = "$auto, net-gazer"
depends = "net-gazer"
section = "lib"
priority = "optional"
assets = [
    # binary
    ["target/release/libnet_gazer_traceroute.so", "usr/local/lib/net-gazer/", "755"],
    # config
    ["etc/net-gazer/libnet-gazer-traceroute.toml", "usr/local/etc/net-gazer/libnet-gazer-traceroute.toml", "644"],
    # ldconfig
    ["etc/misc/ld.so.conf.d/libnet-gazer-traceroute.conf", "etc/ld.so.conf.d/libnet-gazer-traceroute.conf", "644"],
    # assets
    ["LICENSE", "/usr/share/doc/net-gazer/LICENSE-traceroute-plugin", "644"],
]

maintainer-scripts = "etc/misc/pkg-scripts"
conf-files=[
    "usr/local/etc/net-gazer/libnet-gazer-traceroute.toml",
]

