[package]
name = "lib-fbuffers"
version = "0.1.0"
authors = ["soleinik <162591+soleinik@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-data = { path="../lib-data" }
flatbuffers = "24.3"
planus = { version = "1.0.0", default-features = false }